<<<<<<< HEAD
[gd_scene load_steps=14 format=4 uid="uid://ln51xmv2t25d"]
=======
[gd_scene load_steps=10 format=3 uid="uid://ln51xmv2t25d"]
>>>>>>> 5612696270685209238f8277bb028f1ca9969b26

[ext_resource type="ArrayMesh" uid="uid://7r3speycoo5p" path="res://Scenes/3dstuff/bank_a.tres" id="2_6p53r"]
[ext_resource type="Script" uid="uid://lu8vm2fyufqf" path="res://Scenes/3dstuff/bank.gd" id="2_u0ti3"]
[ext_resource type="PackedScene" uid="uid://bsm1p6nxcrmcm" path="res://Scenes/UI/lockpick/robbable.tscn" id="3_6p53r"]
[ext_resource type="PackedScene" uid="uid://crcyrd566npe8" path="res://Scenes/UI/interact_indication.tscn" id="4_rckue"]
[ext_resource type="AudioStream" uid="uid://bm4oudxtvnv56" path="res://Assets/ui/audio/Vent Bar GWJ 84 - lock open.wav" id="5_webfg"]
[ext_resource type="AudioStream" uid="uid://c33mi5xjw2am0" path="res://Assets/ui/audio/Vent Bar GWJ 84 - door breaking.wav" id="7_6p53r"]
[ext_resource type="AudioStream" uid="uid://pijbr23ynv0o" path="res://Assets/ui/audio/menu woosh.wav" id="7_08xe0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_voqlr"]
size = Vector3(9.95075, 5.16125, 4.74203)

[sub_resource type="BoxShape3D" id="BoxShape3D_s48fp"]
size = Vector3(1.86275, 2.37304, 1.36943)

[node name="bank" type="Node3D"]
script = ExtResource("2_u0ti3")
level = 10

[node name="bank2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.579, -0.145073, 0.258)
mesh = ExtResource("2_6p53r")
skeleton = NodePath("")

[node name="Area3D" type="StaticBody3D" parent="bank2"]
collision_layer = 255

[node name="CollisionShape3D2" type="CollisionShape3D" parent="bank2/Area3D"]
transform = Transform3D(0.999984, 0, 0, 0, 1, -6.43041e-13, 0, 0, 0.999984, -0.989675, 2.70602, -0.73408)
shape = SubResource("BoxShape3D_voqlr")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="bank2/Area3D"]
transform = Transform3D(0.999989, 0, 0, 0, 1, -4.51195e-13, 0, 0, 0.999989, 0.929116, 1.5196, 2.47188)
shape = SubResource("BoxShape3D_s48fp")

[node name="robbable" parent="." instance=ExtResource("3_6p53r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0.278755)

[node name="interact_indication" parent="." instance=ExtResource("4_rckue")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.131067, 0.829097, 4.01242)

[node name="lock_clock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_webfg")
bus = &"SFX"

[node name="reward_choose" type="CanvasLayer" parent="."]
visible = false

[node name="woosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_08xe0")
bus = &"SFX"

[node name="door" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_6p53r")
bus = &"SFX"

[connection signal="win" from="robbable" to="." method="_on_robbable_win"]
